<resources>
    <string name="app_name">CodepathParstagram</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="sign_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="description">Description</string>
    <string name="take_picture">Take Picture</string>
    <string name="submit">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
</resources>